# SaturnOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  create-ramdisk  run.sh  titan  titan.sh
Assets/: README.md
Assets/ESP/Supernova/: Config.conf
Bootloader/: .clang-format  .gitignore  CMakeLists.txt  Makefile
Bootloader/Include/: ACPI.h  Config.h  EspFileSystem.h  Kernel.h  Logger.h  Memory.h  Ramdisk.h  UefiACPI.h  UefiBootServices.h  UefiRuntimeServices.h  UefiTypes.h
Bootloader/Include/Logger/: Serial.h
Bootloader/Include/UefiProtocols/: GraphicsOutput.h  LoadedImage.h  SimpleFileSystem.h  SimpleTextOutput.h
Bootloader/Output/: bootx64.efi
Bootloader/Source/: ACPI.c  Config.c  EspFileSystem.c  Kernel.c  Main.c  Memory.c  MemoryMap.c  Ramdisk.c
Bootloader/Source/Logger/: Framebuffer.c
Bootloader/inc/: EspFileSystem.h  FrameAllocator.h  Kernel.h  Logger.h  Memory.h  MemoryMap.h  README.md  Uefi.h
Bootloader/inc/Logger/: Framebuffer.h  Serial.h
Bootloader/inc/UefiProtocols/: GraphicsOutput.h
Bootloader/src/: ACPI.c  EspFileSystem.c  FontBitmaps.c  FrameAllocator.c  Kernel.c  Logger.c  Main.c  Memory.c  MemoryMap.c
Bootloader/src/Logger/: Framebuffer.c  Serial.c
Kernel/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  linker.ld
Kernel/Include/: ACPI.h  APIC.h  CPUInfo.h  Core.h  ELFLoader.h  Format.h  GDT.h  IDT.h  Instructions.h  InterruptHandlers.h  Logger.h  MSR.h  Memory.h  PCI.h  Panic.h  Parameters.h  Random.h  Result.h  Scheduler.h  Syscalls.h
Kernel/Include/Logger/: Framebuffer.h
Kernel/Include/Memory/: BitmapFrameAllocator.h  Frame.h  Page.h  PageTable.h  PhysAddr.h  SizedBlockAllocator.h  VirtAddr.h  VirtualAddress.h  VirtualMemoryAllocator.h
Kernel/Include/Storage/: GPT.h  VirtualFileSystem.h
Kernel/Include/Storage/Drivers/: AHCI.h
Kernel/Include/Storage/Filesystems/: Ext2.h  STFS.h
Kernel/Output/: Kernel.elf
Kernel/Source/: ACPI.c  APIC.c  CPUInfo.c  ELFLoader.c  FontBitmaps.c  GDT.c  IDT.c  InterruptHandlers.c  Logger.c  Main.c  Memory.c  PCI.c  Panic.c  Parameters.c  Random.c  Random.s  RandomRDRAND.s  Scheduler.c  SchedulerHandler.s  SyscallHandler.s  Syscalls.c
Kernel/Source/Logger/: Framebuffer.c  SerialConsole.c
Kernel/Source/Memory/: BitmapFrameAllocator.c  HeapMemoryAllocator.c  Page.c  PageTable.c  SizedBlockAllocator.c  VirtAddr.c  VirtualAddress.c  VirtualMemoryAllocator.c
Kernel/Source/Storage/: GPT.c  README.md  VirtualFileSystem.c
Kernel/Source/Storage/Drivers/: AHCI.c
Kernel/Source/Storage/Filesystems/: Ext2.c  STFS.c
Kernel/inc/: ACPI.h  ACPI.hpp  APIC.hpp  CPUID.h  CPUID.hpp  CPUInfo.h  Core.h  Core.hpp  Format.h  Format.hpp  FrameAllocator.hpp  GDT.hpp  IDT.h  IDT.hpp  InOut.h  InOut.hpp  InterruptHandlers.h  InterruptHandlers.hpp  Keyboard.h  Keyboard.hpp  Logger.h  Logger.hpp  MSR.h  MSR.hpp  Memory.h  Memory.hpp  PCI.h  PCI.hpp  PIC.hpp  Panic.h  Panic.hpp  Result.h  Result.hpp  STL.hpp
Kernel/inc/Logger/: Framebuffer.hpp  SerialConsole.h  SerialConsole.hpp
Kernel/inc/Memory/: BitmapFrameAllocator.h  BitmapFrameAllocator.hpp  Frame.h  Frame.hpp  FrameAllocator.hpp  HeapMemoryAllocator.h  HeapMemoryAllocator.hpp  Page.h  Page.hpp  PageTable.h  PageTable.hpp  PhysicalAddress.h  PhysicalAddress.hpp  VirtualAddress.h  VirtualAddress.hpp
Kernel/inc/Storage/: GPT.h
Kernel/inc/Storage/Drivers/: AHCI.h  NVMe.h  NVMe.hpp
Kernel/src/: ACPI.c  ACPI.cpp  APIC.c  APIC.cpp  CPUID.c  CPUID.cpp  FlushGDT.s  FontBitmaps.c  FontBitmaps.cpp  Format.c  Format.cpp  FrameAllocator.cpp  GDT.cpp  IDT.c  IDT.cpp  InOut.c  InOut.cpp  InterruptHandlers.c  InterruptHandlers.cpp  Keyboard.c  Keyboard.cpp  LoadGDT.s  Logger.c  Logger.cpp  Main.c  Main.cpp  Memory.c  Memory.cpp  PCI.c  PCI.cpp  PIC.cpp  Panic.c  Panic.cpp  Result.cpp
Kernel/src/Logger/: Framebuffer.c  Framebuffer.cpp  SerialConsole.c  SerialConsole.cpp
Kernel/src/Memory/: BitmapFrameAllocator.c  BitmapFrameAllocator.cpp  Frame.cpp  FrameAllocator.cpp  HeapMemoryAllocator.c  HeapMemoryAllocator.cpp  Page.c  Page.cpp  PageTable.cpp  PhysicalAddress.cpp  VirtualAddress.cpp
Kernel/src/Storage/: GPT.c
Kernel/src/Storage/Drivers/: NVMe.c  NVMe.cpp
LibSaturn/: .clang-tidy  CMakeLists.txt  Makefile  README.md
LibSaturn/Include/: Syscalls.h  Test.h
LibSaturn/Source/: SaturnCRT.c  SyscallWrapper.s  Syscalls.c  Test.c
SaturnCRT/: CMakeLists.txt  README.md
SaturnCRT/Include/: Core.h
SaturnCRT/Source/: SaturnCRT.c
ToolChain/: README.md  clang.patch  x86_64_saturnos-toolchain.cmake
bootloader/: .gitignore  2  Cargo.toml  Makefile  README.md  build.sh  compile_commands.json  run.sh  rust-toolchain.toml
bootloader/.cache/clangd/index/: Main.c.18A7BDC3E6F48001.idx  SimpleTextOutput.h.33BD41FCB193AB8E.idx  Uefi.h.0546E2CABB9BE7D4.idx  UefiBootServices.h.F8C8F10B7DF5CE8D.idx  UefiRuntimeServices.h.3F2651073D3C92AF.idx  UefiTypes.h.F1BC11F1E0984AE9.idx
bootloader/inc/: EspFileSystem.h  FrameAllocator.h  Kernel.h  Logger.h  Memory.h  README.md  Uefi.h  UefiBootServices.h  UefiRuntimeServices.h  UefiTypes.h
bootloader/inc/Logger/: Framebuffer.h
bootloader/inc/UefiProtocols/: GraphicsOutput.h  LoadedImage.h  SimpleFileSystem.h  SimpleTextOutput.h
bootloader/src/: EspFileSystem.c  FontBitmaps.c  FrameAllocator.c  Kernel.c  Logger.c  Main.c  Memory.c  esp_file_system.rs  framebuffer_log.rs  kernel.rs  logger.rs  main.rs  memory.rs
bootloader/src/Logger/: Framebuffer.c  Serial.c
bootloader/src/logger/: serial.rs
esp/Supernova/: Kernel.elf
esp/efi/boot/: bootx64.efi
kernel/: Cargo.toml  Makefile  README.md  linker.ld
kernel/.cargo/: config.toml
kernel/src/: Main.cpp  main.rs
