[package]
name = "nutcracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nutcracker"
test = false
bench = false

[dependencies]
log = "0.4.22"
uefi = "0.30.0"
x86_64 = "0.15.1"
noto-sans-mono-bitmap = { version = "0.3.0", default-features = false, features = ["regular", "size_20", "unicode-basic-latin", "unicode-specials"] }
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

